# pyrs

./: .dockerignore  .gitignore  404.html  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  index.html  robots.txt  sitemap.xml
_astro/: DocsToc.astro_astro_type_script_index_0_lang.iIyV9BqT.js
benchmark/: index.html
debug/: index.html
docs/: ALGO_AUDIT_BACKLOG.md  BOOTSTRAP_IMPORT_DEBT_CHECKLIST.md  BUILTIN_OPTIMIZATION_POLICY.md  BUILTIN_PARITY.md  CAPI_LIFETIME_MODEL.md  CAPI_NOOP_EXECUTION_ORDER.md  CAPI_NOOP_INVENTORY.md  CAPI_PLAN.md  CLONE_AUDIT.md  CLONE_BASELINE.txt  COMPATIBILITY.md  COVERAGE_GATE_POLICY.json  CPYTHON_COMPAT_BENCHMARK.md  CPYTHON_COMPAT_PRIORITIES.md  CPYTHON_TEST_SUITE_TRIAGE.md  DEVELOPER_TOOLING.md  DICT_BACKEND_BENCHMARK.md  DICT_BACKEND_CPYTHON_MAPPING.md  ENGINEERING_GATES.md  ERROR_REPORTING_PLAN.md  EXTENSION_CAPABILITY_MATRIX.md  EXTENSION_CAPI_V1.md  EXTENSION_ECOSYSTEM_DESIGN.md  EXTENSION_LIBRARY_LIFETIME_PLAN.md  EXTENSION_PACKAGING_CONTRACT.md  LANGUAGE_FEATURE_INVENTORY.json  LANGUAGE_FEATURE_INVENTORY.md  LANGUAGE_FEATURE_MANIFEST.json  LANGUAGE_FEATURE_MANIFEST.md  LANGUAGE_FEATURE_PROBE_MAP.json  MILESTONE_12_BACKLOG.md  NATIVE_EXTENSION_IMPORT_PERF_PLAN.md  NOOP_BUILTIN_CLASSIFICATION.md  NOOP_BUILTIN_INVENTORY.txt  NUMPY_BRINGUP_GATE.md  OBJECT_MODEL_AUDIT.md  OPTIMIZATION_BACKLOG.md  OPTIMIZATION_PLAN.md  PRODUCTION_READINESS.md  PUBLIC_MICROBENCHMARKS.md  (+24 more)
include/: pyrs_capi.h  pyrs_cpython_compat.h
playground/: index.html
reference/: index.html
scripts/: audit_proxy_dunders.py  audit_scaffolding.py  audit_vm_semantic_expectations.py  audit_wasm_host_seam.py  bench_dict_backend.sh  bench_dispatch_hotpath.sh  bench_fib_gate.sh  bench_startup_gate.sh  bootstrap_dev_tools.sh  build_cpython_stdlib_pack.py  build_wasm_stdlib_subset.py  build_wasm_website_bundle.sh  check_builtin_parity.py  check_capi_noop_inventory.py  check_language_feature_coverage.py  check_language_feature_manifest.py  check_playground_worker_contract.mjs  check_wasm_artifact_hash_extractor_contract.py  check_wasm_branch.sh  check_wasm_dispatch_snapshot_contract.py  clone_audit.sh  collect_wasm_evidence_pack.py  cpython_compat_benchmark_worker.py  dispatch_cpython_compat_benchmark.py  extract_wasm_ci_artifact_hashes.py  generate_abi3_manifest.py  generate_language_feature_inventory.py  generate_opcode_table.py  generate_unicode_name_table.py  generate_wasm_api_contract_surface_summary.py  (+33 more)
(+296 files in other folders)
