[package]
name = "pyrs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10.6"
hmac = "0.12.1"
md-5 = "0.10.6"
nu-ansi-term = "0.50.3"
pbkdf2 = "0.12.2"
reedline = "0.45.0"
scrypt = "0.11.0"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"

[build-dependencies]
cc = "1.2.43"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
